<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity"
    android:background="@color/white">
    <!-- context en el layout ^ -->

    <TextView
        android:id="@+id/TVLiniciosesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:paddingStart="4dp"
        android:text="@string/textologin"
        android:textColor="@color/darkblue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/TVLwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/textowelcome"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVLiniciosesion" />


    <ImageView
        android:id="@+id/IVcamion"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/descripcioncamion"
        android:src="@drawable/camionbasura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVLwelcome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CARDLemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IVcamion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="1dp"
                android:contentDescription="@string/ic_email"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/ETLemail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="1dp"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:hint="@string/editemail"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/CARDLpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CARDLemail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="1dp"
                android:contentDescription="@string/ic_password"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/ETLpassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:hint="@string/editpassword"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:padding="12dp"
                android:textSize="16sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/TVLolvidepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/textolvidepassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CARDLpassword" />


    <LinearLayout
        android:id="@+id/LLLlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVLolvidepassword">

        <TextView
            android:id="@+id/TVLsincuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textowithoutaccount"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnL_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="7dp"
            android:text="@string/buttonregistrar"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>



    <Button
        android:id="@+id/btnL_acceso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_registrar"
        android:text="@string/buttonacceso"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLLlogin" />

    <ProgressBar
        android:id="@+id/PBLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btnL_acceso"
        app:layout_constraintStart_toStartOf="@id/btnL_acceso"
        app:layout_constraintEnd_toEndOf="@id/btnL_acceso"
        app:layout_constraintBottom_toBottomOf="@id/btnL_acceso"/>

    <TextView
        android:id="@+id/TVLredessociales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/socialmedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnL_acceso" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVLredessociales">

        <ImageButton
            android:id="@+id/btnL_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/buttongoogle"
            android:src="@drawable/ic_google" />

        <TextView
            android:id="@+id/TVLor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="10dp"
            android:text="@string/textoor" />

        <ImageButton
            android:id="@+id/btnL_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/buttonfacebook"
            android:src="@drawable/ic_facebook" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>