<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crearcuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!-- context en el layout ^ -->

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/descripcionforma"
        android:scaleType="fitXY"
        android:src="@drawable/forma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btnC_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_regresar"
        android:contentDescription="@string/buttonback"
        android:padding="15dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/LLCcreacuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnC_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textocrea"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/textocuenta"
            android:textColor="@color/darkblue"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <TextView
        android:id="@+id/TVCwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textowelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLCcreacuenta" />



    <ImageView
        android:id="@+id/IVcamion"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/descripcioncamion"
        android:src="@drawable/create_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVCwelcome" />


    <androidx.cardview.widget.CardView
        android:id="@+id/CARDCemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IVcamion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="1dp"
                android:contentDescription="@string/ic_email"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/ETCemail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:hint="@string/editemail"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CARDCpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CARDCemail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="1dp"
                android:contentDescription="@string/ic_password"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/ETCpassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:hint="@string/editpassword"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>




    <LinearLayout
        android:id="@+id/LLClogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CARDCpassword">

        <TextView
            android:id="@+id/TVCcuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textowithaccount"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnC_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="7dp"
            android:text="@string/buttoniniciar"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <Button
        android:id="@+id/btnC_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_registrar"
        android:text="@string/buttoncrear"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLClogin" />


    <ProgressBar
        android:id="@+id/PBRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/btnC_register"
        app:layout_constraintStart_toStartOf="@id/btnC_register"
        app:layout_constraintEnd_toEndOf="@id/btnC_register"
        app:layout_constraintBottom_toBottomOf="@id/btnC_register"/>




</androidx.constraintlayout.widget.ConstraintLayout>